--- a/src/main/resources/templates/polymorphicView.html
+++ b/src/main/resources/templates/polymorphicView.html
@@ -5,22 +5,23 @@ scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>AdminLTE 2 | Dashboard</title>
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport' />
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'/>
     <!-- Bootstrap 3.3.2 -->
-    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <!-- Font Awesome Icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
+          type="text/css"/>
     <!-- Ionicons -->
-    <link href="https://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
-    <link href="/static/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
     <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
           page. However, you can choose any other skin. Make sure you
           apply the skin class to the body tag so the changes take effect.
     -->
-    <link href="/static/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css"/>
 
     <link href="/js/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <link href="/js/jtable.2.4.0/themes/metro/blue/jtable.min.css" rel="stylesheet" type="text/css"/>
@@ -64,7 +65,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                         <a href="#">
                                             <div class="pull-left">
                                                 <!-- User Image -->
-                                                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+                                                <img src="dist/img/user2-160x160.jpg" class="img-circle"
+                                                     alt="User Image"/>
                                             </div>
                                             <!-- Message title and timestamp -->
                                             <h4>
@@ -74,12 +76,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                             <!-- The message -->
                                             <p>Why not buy a new awesome theme?</p>
                                         </a>
-                                    </li><!-- end message -->
-                                </ul><!-- /.menu -->
+                                    </li>
+                                    <!-- end message -->
+                                </ul>
+                                <!-- /.menu -->
                             </li>
                             <li class="footer"><a href="#">See All Messages</a></li>
                         </ul>
-                    </li><!-- /.messages-menu -->
+                    </li>
+                    <!-- /.messages-menu -->
 
                     <!-- Notifications Menu -->
                     <li class="dropdown notifications-menu">
@@ -97,7 +102,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                         <a href="#">
                                             <i class="fa fa-users text-aqua"></i> 5 new members joined today
                                         </a>
-                                    </li><!-- end notification -->
+                                    </li>
+                                    <!-- end notification -->
                                 </ul>
                             </li>
                             <li class="footer"><a href="#">View all</a></li>
@@ -125,12 +131,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                             <!-- The progress bar -->
                                             <div class="progress xs">
                                                 <!-- Change the css width attribute to simulate progress -->
-                                                <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                                <div class="progress-bar progress-bar-aqua" style="width: 20%"
+                                                     role="progressbar" aria-valuenow="20" aria-valuemin="0"
+                                                     aria-valuemax="100">
                                                     <span class="sr-only">20% Complete</span>
                                                 </div>
                                             </div>
                                         </a>
-                                    </li><!-- end task item -->
+                                    </li>
+                                    <!-- end task item -->
                                 </ul>
                             </li>
                             <li class="footer">
@@ -150,9 +159,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <ul class="dropdown-menu">
                             <!-- The user image in the menu -->
                             <li class="user-header">
-                                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+                                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+
                                 <p>
-                                    <span class="hidden-xs"><span  th:text="${userSessionInfo.username}">Mallika</span></span>
+                                    <span class="hidden-xs"><span
+                                            th:text="${userSessionInfo.username}">Mallika</span></span>
                                     <small>Admin</small>
                                 </p>
                             </li>
@@ -206,7 +217,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="input-group">
                     <input type="text" name="q" class="form-control" placeholder="Search..."/>
               <span class="input-group-btn">
-                <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
+                <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i>
+                </button>
               </span>
                 </div>
             </form>
@@ -226,7 +238,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <!--<li><a href="#">Link in level 2</a></li>-->
                 <!--</ul>-->
                 <!--</li>-->
-            </ul><!-- /.sidebar-menu -->
+            </ul>
+            <!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
     </aside>
@@ -236,7 +249,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                <span>Project | <span th:text="${project.getProjectname()}" /></span>
+                <span>Project | <span th:text="${project.getProjecttype()}"/></span>
                 <small>Project status</small>
             </h1>
             <ol class="breadcrumb">
@@ -246,42 +259,51 @@ scratch. This page gets rid of all links and provides the needed markup only.
         </section>
 
         <!-- Main content -->
-        <section class="content">
+        <div class="content">
 
             <h2 th:text="${pagetype}"></h2>
-            <span><h2>User = <span th:text="${userSessionInfo.username}" /></h2></span>
-            <span><h2>ProjectId = <span th:text="${project.getId()}" /></h2></span>
-            <span><h2>PercentageComplete = <span th:if="${project.getProjecttype() == 'WATERFALL'}" th:text="${projectStatus.getPercentageComplete()}" /></h2></span>
+            <span><h2>User = <span th:text="${userSessionInfo.username}"/></h2></span>
+            <span><h2>ProjectId = <span th:text="${project.getId()}"/></h2></span>
 
+            <div th:if="${project.getProjecttype() == 'WATERFALL'}">
+                <span><h2>PercentageComplete = <span th:text="${projectStatus.getPercentageComplete()}"/></h2></span>
+            </div>
+            <div th:if="${project.getProjecttype() == 'KANBAN'}">
+                <span><h2>Queue Status = <span th:text="${projectStatus.getProjectStatus()}"/></h2></span>
+            </div>
+            <div th:if="${project.getProjecttype() == 'SCRUM'}">
+                <span><h2>Estimated Completion date = <span th:text="${projectStatus.getCompletionDate()}"/></h2></span>
+            </div>
             <!--<span><h2>EstimatedCompletionDate = <span th:text="${projectStatus.getCompletionDate()}" /></h2></span>-->
-
 
             <!-- <span><h2>SprintId = <span th:if="${sprint} != null" th:text="${sprint.getId()}" /></h2></span>-->
 
-        </section><!-- /.content -->
-    </div><!-- /.content-wrapper -->
-
-    <!-- Main Footer -->
-    <footer class="main-footer">
-        <!-- To the right -->
-        <div class="pull-right hidden-xs">
-            All systems go
         </div>
-        <!-- Default to the left -->
-        <strong>Copyright &copy; 2015 <a href="#">Company</a>.</strong> All rights reserved.
-    </footer>
+        <!-- /.content-wrapper -->
 
-</div><!-- ./wrapper -->
+        <!-- Main Footer -->
+        <footer class="main-footer">
+            <!-- To the right -->
+            <div class="pull-right hidden-xs">
+                All systems go
+            </div>
+            <!-- Default to the left -->
+            <strong>Copyright &copy; 2015 <a href="#">Company</a>.</strong> All rights reserved.
+        </footer>
 
-<!-- REQUIRED JS SCRIPTS -->
+    </div>
+    <!-- ./wrapper -->
 
-<!-- Bootstrap 3.3.2 JS -->
-<script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<!-- AdminLTE App -->
-<script src="dist/js/app.min.js" type="text/javascript"></script>
+    <!-- REQUIRED JS SCRIPTS -->
 
-<!-- Optionally, you can add Slimscroll and FastClick plugins.
-      Both of these plugins are recommended to enhance the
-      user experience -->
+    <!-- Bootstrap 3.3.2 JS -->
+    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- AdminLTE App -->
+    <script src="dist/js/app.min.js" type="text/javascript"></script>
+
+    <!-- Optionally, you can add Slimscroll and FastClick plugins.
+          Both of these plugins are recommended to enhance the
+          user experience -->
+    </div>
 </body>
 </html>
